Fix jubilaeum-section Body Overflow

--- a/style/scss/sections/jubilaeum-section.scss
+++ b/style/scss/sections/jubilaeum-section.scss
@@ -128,7 +128,6 @@
             .jubilaeum-section-slider {
                 display: block;
                 height: 400px;
-                width: 100vw;
                 overflow: hidden;
     
                 @include bp(medium1) {
